@@ -201,22 +201,23 @@ class ExecTestBase(Test):
             # Get the output generated by the program.
             stdout = e.stdout
             stderr = e.stderr
+            # Record the results.
+            result["ExecTest.exit_code"] = str(exit_code)
+            result["ExecTest.stdout"] = "<pre>" + stdout + "</pre>"
+            result["ExecTest.stderr"] = "<pre>" + stderr + "</pre>"
             # Check to see if the exit code matches.
             if exit_code != self.exit_code:
                 causes.append("exit_code")
                 result["ExecTest.expected_exit_code"] \
                     = str(self.exit_code)
-                result["ExecTest.exit_code"] = str(exit_code)
             # Check to see if the standard output matches.
             if not self.__CompareText(stdout, self.stdout):
                 causes.append("standard output")
-                result["ExecTest.stdout"] = "<pre>" + stdout + "</pre>"
                 result["ExecTest.expected_stdout"] \
                     = "<pre>" + self.stdout + "</pre>"
             # Check to see that the standard error matches.
             if not self.__CompareText(stderr, self.stderr):
                 causes.append("standard error")
-                result["ExecTest.stderr"] = "<pre>" + stderr + "</pre>"
                 result["ExecTest.expected_stderr"] \
                     = "<pre>" + self.stderr + "</pre>"
             # If anything went wrong, the test failed.
